tests/error/poly_errors/arg_mismatch6.py
from guppylang.decorator import guppy

T = guppy.type_var("T")


@guppy.declare
def foo(x: T) -> None:
    ...


@guppy
def main(x: float) -> None:
    foo[int](x)


main.compile()
