tests/error/poly_errors/arg_mismatch6.err
Error: Type mismatch (at $FILE:13:13)
   | 
11 | @guppy
12 | def main(x: float) -> None:
13 |     foo[int](x)
   |              ^ Expected argument of type `int`, got `float`

Guppy compilation failed due to 1 previous error
